RESOLVED FIXED38712
Compositing layers that are clipped out by an overflow:scroll parent fail to get created on reveal
https://bugs.webkit.org/show_bug.cgi?id=38712
Summary Compositing layers that are clipped out by an overflow:scroll parent fail to ...
Simon Fraser (smfr)
Reported 2010-05-06 17:55:45 PDT
There's an issue with overlap testing, which is a little over-zealous with overflow:scroll ancestors.
Attachments
Layout Test (1.31 KB, text/html)
2010-05-06 17:56 PDT, Simon Fraser (smfr)
no flags
Patch (8.94 KB, patch)
2010-05-06 21:55 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-05-06 17:56:04 PDT
Simon Fraser (smfr)
Comment 2 2010-05-06 17:56:23 PDT
Created attachment 55327 [details] Layout Test
Simon Fraser (smfr)
Comment 3 2010-05-06 21:55:29 PDT
Simon Fraser (smfr)
Comment 4 2010-05-06 22:05:49 PDT
WebKit Review Bot
Comment 6 2010-05-06 23:06:15 PDT
http://trac.webkit.org/changeset/58936 might have broken Leopard Intel Release (Tests) The following changes are on the blame list: http://trac.webkit.org/changeset/58936 http://trac.webkit.org/changeset/58937
Note You need to log in before you can comment on or make changes to this bug.